FIXED bug 175859 - [DataBinding] Use MessageFormat for validation hints https://bugs.eclipse.org/bugs/show_bug.cgi?id=175859